fixed margin issues for tablet sizes; fixed carousel buttons being too small at desktop size

--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@ html {
 body {
     padding: 0;
     margin: 0;
-    width: 100%;
+    width: 100vw;
     /* height: 3000px; */
 }
 
@@ -52,7 +52,8 @@ p {
 }
 
 a {
-    color: gainsboro;
+    color: #dcdcdc;
+    /* display: inline; */
 }
 
 span {
@@ -62,7 +63,7 @@ span {
     font-family: 'Raleway', sans-serif;
 }
 
-.hidden > * {
+.hidden, .hidden * {
     display: none;
 }
 
@@ -72,11 +73,6 @@ span {
     padding-right: 5vw;
     /* padding-top: 5vh;
     padding-bottom: 5vh; */
-}
-
-.carousel-button {
-    background-color: #129490;
-    box-shadow: 3px 3px #27272C;
 }
 
 .project-title {
@@ -95,6 +91,21 @@ span {
     width: fit-content;
 }
 
+#flex-carousel {
+    position: fixed;
+    bottom: 0;
+    /* left: 0; */
+    width: 100vw;
+    height: auto;
+    display: flex;
+    /* justify-content: space-evenly; */
+    background-color: #445A66; 
+}
+
+.carousel-button {
+    background-color: #129490;
+    box-shadow: 3px 3px #27272C;
+}
 
 /* smartphone size */
 @media screen and (max-width: 480px){ 
@@ -120,7 +131,7 @@ span {
         font-style: normal;
         font-size: 40px;
         width: fit-content;
-        padding-right: 20%;
+        /* padding-right: 20%; */
     }
 
     .project-section-title {
@@ -131,8 +142,7 @@ span {
         font-size: 18px;   
         align-self: center;
         width: fit-content; 
-        margin-left: 10%;
-        margin-right: auto;
+        /* margin-left: 10%; */
     }
     
     .center {
@@ -141,6 +151,12 @@ span {
 
     .end {
         align-self: flex-end;
+    }
+
+    #flex-carousel {
+        padding-top: 5%;
+        padding-bottom: 5%;
+        justify-content: space-evenly;
     }
 
     .carousel-button {
@@ -155,15 +171,6 @@ span {
         height: 225px;
     }
 
-    #flex-carousel {
-        position: fixed;
-        bottom: 5%;
-        width: 100vw;
-        height: fit-content;
-        display: flex;
-        justify-content: space-evenly;
-    }
-
 }
 
 /* tablet and larger */
@@ -175,7 +182,10 @@ span {
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
-        width: 100%;
+        width: 80%;
+        padding-left: 20%;
+        /* padding-right: 30%; */
+        /* align-items: flex-end; */
         /* height: 75%; */
     }
     
@@ -192,13 +202,21 @@ span {
         display: flex;
         flex-direction: column;
         margin-bottom: 10%;
+        position: absolute;
+        padding-left: 20%;
+        padding-right: 20%;
     }
+
+    /* .project-all-text {
+        display: flex;
+        flex-direction: row;
+    } */
 
     .project-title {
         font-style: normal;
         font-size: 40px;
         width: fit-content;
-        padding-right: 20%;
+        /* padding-right: 20%; */
     }
 
     .project-section-title {
@@ -218,29 +236,27 @@ span {
     }
 
     .end {
-        align-self: flex-end;
+        align-self: center;
     }
 
     iframe {
+        margin-top: 5vh;
         width: 640px;
         height: 480px;
+        align-self: center;
     }
 
     #flex-carousel {
-        position: fixed;
-        bottom: 5%;
-        width: 100vw;
-        height: fit-content;
-        display: flex;
-        justify-content: center
-        ;
+        padding: 2%;
+        justify-content: center;
     }
 
     .carousel-button {
         border-radius: 30%;
-        width: 3vw;
-        height: 3vw;
-        margin-left: 5vw;
+        width: 2vw;
+        height: 2vw;
+        margin-left: 2vw;
+        margin-right: 2vw;
     }
     
     .project-description {
